<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/rank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rankLabel" />

    <TextView
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rank"
        android:text="@string/firstNameLabel" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rank"
        android:layout_toEndOf="@id/firstName"
        android:text="@string/lastNameLabel" />

    <TextView
        android:id="@+id/flightSpecialty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstName"
        android:text="@string/workPlaceLabel" />

    <Button
        android:id="@+id/changeInfo"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/changeInfo" />

</RelativeLayout>

