<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_auth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_background"

    android:orientation="vertical"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/flightBookLabel"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="128dp"
        android:gravity="center_horizontal"
        android:inputType=""
        android:text="@string/flightBookLabel"
        android:textColor="@color/orange_light"
        android:textSize="36sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/flightSpecialty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rectangle"
        android:elevation="4dp"
        android:hint="@string/flightSpecialtyLabel"
        android:inputType=""
        android:textColorHint="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/flightBookLabel"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/rank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rectangle"
        android:elevation="4dp"
        android:hint="@string/rankLabel"
        android:inputType=""
        android:textColorHint="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/flightSpecialty"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rectangle"
        android:elevation="4dp"
        android:hint="@string/firstNameLabel"
        android:inputType=""
        android:textColorHint="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/rank"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rectangle"
        android:elevation="4dp"
        android:hint="@string/lastNameLabel"
        android:inputType=""
        android:textColorHint="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/firstName"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/patronymic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rectangle"
        android:elevation="4dp"
        android:hint="@string/patronymicLabel"
        android:inputType=""
        android:textColorHint="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/lastName"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rectangle"
        android:elevation="4dp"
        android:hint="@string/categoryLabel"
        android:inputType=""
        android:textColorHint="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/patronymic"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/open"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ellipse"
        android:elevation="4dp"
        android:text="@string/open"
        android:textColor="@android:color/background_light"
        android:textColorLink="@color/orange_light"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category" />

</android.support.constraint.ConstraintLayout>
