<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:ignore="MissingDefaultResource">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardViewFlightType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        card_view:cardElevation="8dp"
        card_view:contentPaddingBottom="8dp">

        <TextView
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date" />

        <TextView
            android:id="@+id/etQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity" />

        <TextView
            android:id="@+id/etMeteo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meteo" />
    </android.support.v7.widget.CardView>

</LinearLayout>
