<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/dailybackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dailyFlightAccounting"
        style="@style/Headline_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:gravity="center"
        android:inputType=""
        android:text="@string/dailyFlightAccounting" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rectangle"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quantityFlightsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:inputType=""
            android:text="@string/quantityFlights"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/quantityFlightsET"
            android:layout_width="60dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginStart="72dp"
            android:background="@drawable/rectangle_photo"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rectangle"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/totalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:inputType=""
            android:text="@string/totalTime"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/totalTimeHour"
            android:layout_width="60dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginStart="124dp"
            android:background="@drawable/rectangle_photo"
            android:hint="@string/hour"
            android:inputType="number"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/totalTimeMin"
            android:layout_width="60dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:background="@drawable/rectangle_photo"
            android:hint="@string/min"
            android:inputType="number"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rectangle"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/closeCabin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:inputType=""
            android:text="@string/closeCabin"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/closeCabinHour"
            android:layout_width="60dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginStart="84dp"
            android:background="@drawable/rectangle_photo"
            android:hint="@string/hour"
            android:inputType="number"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/closeCabinMin"
            android:layout_width="60dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:background="@drawable/rectangle_photo"
            android:hint="@string/min"
            android:inputType="number"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rectangle"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/totalSmu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:inputType=""
            android:text="@string/totalSmu"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/totalSmuHour"
            android:layout_width="60dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginStart="138dp"
            android:background="@drawable/rectangle_photo"
            android:hint="@string/hour"
            android:inputType="number"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/totalSmuMin"
            android:layout_width="60dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:background="@drawable/rectangle_photo"
            android:hint="@string/min"
            android:inputType="number"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rectangle"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:inputType=""
            android:text="@string/cloud"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cloudHour"
            android:layout_width="60dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginStart="148dp"
            android:background="@drawable/rectangle_photo"
            android:hint="@string/hour"
            android:inputType="number"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/cloudMin"
            android:layout_width="60dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:background="@drawable/rectangle_photo"
            android:hint="@string/min"
            android:inputType="number"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rectangle"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quantityZahodTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:inputType=""
            android:text="@string/quantityZahod"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/quantityZahodET"
            android:layout_width="60dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginStart="72dp"
            android:background="@drawable/rectangle_photo"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rectangle"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quantityPosadTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:inputType=""
            android:text="@string/quantityPosad"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/quantityPosadET"
            android:layout_width="60dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginStart="72dp"
            android:background="@drawable/rectangle_photo"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rectangle"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quantityPosadMpTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:inputType=""
            android:text="@string/quantityPosadMp"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/quantityPosadMpET"
            android:layout_width="60dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:background="@drawable/rectangle_photo"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:elevation="4dp"
        android:text="@string/save"
        android:textColor="@color/orange_light"
        android:textColorLink="@color/orange_light"
        android:textSize="14sp" />

</LinearLayout>
